# FIFASquadFileDownloader

./: .gitignore  LICENSE  README.md  bnry  main.py  pyproject.toml
other/: binreader.py  legacy_unpack.py
squad_downloader/: int8hash.py
