[tool.poetry]
name = "fifasquadfiledownloader"
version = "0.1.0"
description = "Clientless squadfile downloader"
authors = ["xAranaktu"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
